@@ -147,6 +147,17 @@ CREATE TABLE `IPv4VS` (
   PRIMARY KEY  (`id`)
 ) ENGINE=MyISAM;
 
+CREATE TABLE `LDAPCache` (
+  `presented_username` char(64) NOT NULL,
+  `successful_hash` char(40) NOT NULL,
+  `first_success` timestamp NOT NULL default CURRENT_TIMESTAMP,
+  `last_retry` timestamp NOT NULL default '0000-00-00 00:00:00',
+  `displayed_name` char(128) default NULL,
+  `memberof` text,
+  UNIQUE KEY `presented_username` (`presented_username`),
+  KEY `scanidx` (`presented_username`,`successful_hash`)
+) ENGINE=InnoDB;
+
 CREATE TABLE `Link` (
   `porta` int(10) unsigned NOT NULL,
   `portb` int(10) unsigned NOT NULL,
